k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-deployment
  labels:
    app: spring-boot-deployment
spec:
  selector:
    matchLabels:
      app: spring-boot-deployment
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: spring-boot-deployment
    spec:
      containers:
        - image: einshtein89/spring_boot_angular:1
          imagePullPolicy: Always
          name: spring-boot-deployment
          ports:
            - containerPort: 3000
