k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: angular-deployment
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: spring-boot-deployment
