k8s/angular-boot-full-configuration.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: books-store
  name: mongodb-service
spec:
  type: NodePort
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: angular-service
  namespace: books-store
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: angular-deployment
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
  namespace: books-store
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: spring-boot-deployment
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: books-store
spec:
  tls:
    - hosts:
        - books.com
      secretName: tls-secret
  rules:
    - host: books.com
      http:
        paths:
          - path: /
            backend:
              serviceName: angular-service
              servicePort: 80
          - path: /api
            backend:
              serviceName: spring-boot-service
              servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: books-store
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo
          ports:
            - containerPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-deployment
  namespace: books-store
  labels:
    app: spring-boot-deployment
spec:
  selector:
    matchLabels:
      app: spring-boot-deployment
  replicas: 1
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: spring-boot-deployment
    spec:
      containers:
        - image: einshtein89/books_backend_mongo:1
          imagePullPolicy: Always
          name: spring-boot-deployment
          ports:
            - containerPort: 3000
